test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-shared-from-oknil-owned.good
init-field-dflt-nonnil-shared-from-oknil-owned.chpl:8: error: cannot initialize field MyRecord.lhs of non-nilable type 'shared MyClass' from a nilable 'owned MyClass?'
